Several common functions move to a single Utility class. Two fragment design for the list of activities + activity detail working for portrait small screens. Pendind:   large screens with two fragments visible.   Create a test data set that refresehs itself on first run.   Correct several stetical flaws.   Data compactation proccess.   GPX files compactation proccess.